# ffmpegwithpy_feature

./: .gitmodules  pyproject.toml
feature/: get.ipynb  get_test.ipynb  model.ipynb
